<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_new_media_label"
        android:paddingLeft="@dimen/edge_padding"/>
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/space_height"/>
    <EditText
            android:id="@+id/media_name"
            android:hint="@string/media_name_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:paddingLeft="@dimen/edge_padding"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_media_button"
        android:onClick="addNewMediaCounter"/>
</LinearLayout>

