<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/media_info_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingLeft="@dimen/edge_padding"/>
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/space_height"/>
    <TextView
            android:id="@+id/media_info_added_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="added_date"
            android:paddingLeft="@dimen/edge_padding"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/media_info_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="count"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="@dimen/edge_padding"/>
        <TextView
                android:id="@+id/media_info_complete_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/not_complete"
                android:paddingRight="@dimen/edge_padding"/>
    </LinearLayout>
    <Space android:layout_width="fill_parent" android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/episode_number"
            android:layout_weight="0.5"
            android:paddingLeft="@dimen/edge_padding"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/episode_date"
            android:layout_weight="0.5"
            android:gravity="right"
            android:paddingRight="@dimen/edge_padding"/>

    </LinearLayout>
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/space_height"/>
    <ListView
            android:id="@+id/media_info_ep_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    </ListView>
</LinearLayout>